luaparser/parser/LuaParser.py
# Generated from luaparser/parser/LuaParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

if "." in __name__:
    from .LuaParserBase import LuaParserBase
else:
    from LuaParserBase import LuaParserBase


class LuaParser ( LuaParserBase ):

    grammarFileName = "LuaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'break'", "'goto'", "'do'", 
                     "'end'", "'while'", "'repeat'", "'until'", "'if'", 
                     "'then'", "'elseif'", "'else'", "'for'", "','", "'in'", 
                     "'function'", "'local'", "'<'", "'>'", "'return'", 
                     "'::'", "'nil'", "'false'", "'true'", "'.'", "'~'", 
                     "'-'", "'#'", "'('", "')'", "'not'", "'<<'", "'>>'", 
                     "'&'", "'//'", "'%'", "':'", "'<='", "'>='", "'and'", 
                     "'or'", "'+'", "'*'", "'{'", "'}'", "'['", "']'", "'=='", 
                     "'..'", "'|'", "'^'", "'/'", "'...'", "'~='" ]

    symbolicNames = [ "<INVALID>", "SEMI", "EQ", "BREAK", "GOTO", "DO", 
                      "END", "WHILE", "REPEAT", "UNTIL", "IF", "THEN", "ELSEIF", 
                      "ELSE", "FOR", "COMMA", "IN", "FUNCTION", "LOCAL", 
                      "LT", "GT", "RETURN", "CC", "NIL", "FALSE", "TRUE", 
                      "DOT", "SQUIG", "MINUS", "POUND", "OP", "CP", "NOT", 
                      "LL", "GG", "AMP", "SS", "PER", "COL", "LE", "GE", 
                      "AND", "OR", "PLUS", "STAR", "OCU", "CCU", "OB", "CB", 
                      "EE", "DD", "PIPE", "CARET", "SLASH", "DDD", "SQEQ", 
                      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
                      "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", 
                      "WS", "NL", "SHEBANG" ]

    RULE_start_ = 0
    RULE_chunk = 1
    RULE_block = 2
    RULE_stat = 3
    RULE_globalstat = 4
    RULE_attnamelist = 5
    RULE_nameattrib = 6
    RULE_attrib = 7
    RULE_retstat = 8
    RULE_label = 9
    RULE_funcname = 10
    RULE_varlist = 11
    RULE_namelist = 12
    RULE_explist = 13
    RULE_exp = 14
    RULE_var = 15
    RULE_prefixexp = 16
    RULE_functioncall = 17
    RULE_call = 18
    RULE_tail = 19
    RULE_args = 20
    RULE_functiondef = 21
    RULE_funcbody = 22
    RULE_parlist = 23
    RULE_varargparam = 24
    RULE_tableconstructor = 25
    RULE_fieldlist = 26
    RULE_field = 27
    RULE_fieldsep = 28
    RULE_number = 29
    RULE_string = 30

    ruleNames =  [ "start_", "chunk", "block", "stat", "globalstat", "attnamelist", 
                   "nameattrib", "attrib", "retstat", "label", "funcname", 
                   "varlist", "namelist", "explist", "exp", "var", "prefixexp", 
                   "functioncall", "call", "tail", "args", "functiondef", 
                   "funcbody", "parlist", "varargparam", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "number", "string" ]

    EOF = Token.EOF
    SEMI=1
    EQ=2
    BREAK=3
    GOTO=4
    DO=5
    END=6
    WHILE=7
    REPEAT=8
    UNTIL=9
    IF=10
    THEN=11
    ELSEIF=12
    ELSE=13
    FOR=14
    COMMA=15
    IN=16
    FUNCTION=17
    LOCAL=18
    LT=19
    GT=20
    RETURN=21
    CC=22
    NIL=23
    FALSE=24
    TRUE=25
    DOT=26
    SQUIG=27
    MINUS=28
    POUND=29
    OP=30
    CP=31
    NOT=32
    LL=33
    GG=34
    AMP=35
    SS=36
    PER=37
    COL=38
    LE=39
    GE=40
    AND=41
    OR=42
    PLUS=43
    STAR=44
    OCU=45
    CCU=46
    OB=47
    CB=48
    EE=49
    DD=50
    PIPE=51
    CARET=52
    SLASH=53
    DDD=54
    SQEQ=55
    NAME=56
    NORMALSTRING=57
    CHARSTRING=58
    LONGSTRING=59
    INT=60
    HEX=61
    FLOAT=62
    HEX_FLOAT=63
    COMMENT=64
    LINE_COMMENT=65
    WS=66
    NL=67
    SHEBANG=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Start_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def chunk(self):
            return self.getTypedRuleContext(LuaParser.ChunkContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_start_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_" ):
                listener.enterStart_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_" ):
                listener.exitStart_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_" ):
                return visitor.visitStart_(self)
            else:
                return visitor.visitChildren(self)




    def start_(self):

        localctx = LuaParser.Start_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.chunk()
            self.state = 63
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChunkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(LuaParser.RetstatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 67
                    self.stat() 
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 73
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuaParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stat_emptyContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEMI(self):
            return self.getToken(LuaParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_empty" ):
                listener.enterStat_empty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_empty" ):
                listener.exitStat_empty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_empty" ):
                return visitor.visitStat_empty(self)
            else:
                return visitor.visitChildren(self)


    class Stat_ifContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(LuaParser.IF, 0)
        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)

        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.THEN)
            else:
                return self.getToken(LuaParser.THEN, i)
        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)

        def END(self):
            return self.getToken(LuaParser.END, 0)
        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.ELSEIF)
            else:
                return self.getToken(LuaParser.ELSEIF, i)
        def ELSE(self):
            return self.getToken(LuaParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_if" ):
                listener.enterStat_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_if" ):
                listener.exitStat_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_if" ):
                return visitor.visitStat_if(self)
            else:
                return visitor.visitChildren(self)


    class Stat_assignmentContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varlist(self):
            return self.getTypedRuleContext(LuaParser.VarlistContext,0)

        def EQ(self):
            return self.getToken(LuaParser.EQ, 0)
        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_assignment" ):
                listener.enterStat_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_assignment" ):
                listener.exitStat_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_assignment" ):
                return visitor.visitStat_assignment(self)
            else:
                return visitor.visitChildren(self)


    class Stat_localContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOCAL(self):
            return self.getToken(LuaParser.LOCAL, 0)
        def attnamelist(self):
            return self.getTypedRuleContext(LuaParser.AttnamelistContext,0)

        def EQ(self):
            return self.getToken(LuaParser.EQ, 0)
        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_local" ):
                listener.enterStat_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_local" ):
                listener.exitStat_local(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_local" ):
                return visitor.visitStat_local(self)
            else:
                return visitor.visitChildren(self)


    class Stat_labelContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_label" ):
                listener.enterStat_label(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_label" ):
                listener.exitStat_label(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_label" ):
                return visitor.visitStat_label(self)
            else:
                return visitor.visitChildren(self)


    class Stat_gotoContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GOTO(self):
            return self.getToken(LuaParser.GOTO, 0)
        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_goto" ):
                listener.enterStat_goto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_goto" ):
                listener.exitStat_goto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_goto" ):
                return visitor.visitStat_goto(self)
            else:
                return visitor.visitChildren(self)


    class Stat_breakContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(LuaParser.BREAK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_break" ):
                listener.enterStat_break(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_break" ):
                listener.exitStat_break(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_break" ):
                return visitor.visitStat_break(self)
            else:
                return visitor.visitChildren(self)


    class Stat_repeatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPEAT(self):
            return self.getToken(LuaParser.REPEAT, 0)
        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)

        def UNTIL(self):
            return self.getToken(LuaParser.UNTIL, 0)
        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_repeat" ):
                listener.enterStat_repeat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_repeat" ):
                listener.exitStat_repeat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_repeat" ):
                return visitor.visitStat_repeat(self)
            else:
                return visitor.visitChildren(self)


    class Stat_forContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(LuaParser.FOR, 0)
        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def EQ(self):
            return self.getToken(LuaParser.EQ, 0)
        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.COMMA)
            else:
                return self.getToken(LuaParser.COMMA, i)
        def DO(self):
            return self.getToken(LuaParser.DO, 0)
        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)

        def END(self):
            return self.getToken(LuaParser.END, 0)
        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)

        def IN(self):
            return self.getToken(LuaParser.IN, 0)
        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_for" ):
                listener.enterStat_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_for" ):
                listener.exitStat_for(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_for" ):
                return visitor.visitStat_for(self)
            else:
                return visitor.visitChildren(self)


    class Stat_functioncallContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_functioncall" ):
                listener.enterStat_functioncall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_functioncall" ):
                listener.exitStat_functioncall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_functioncall" ):
                return visitor.visitStat_functioncall(self)
            else:
                return visitor.visitChildren(self)


    class Stat_localfunctionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOCAL(self):
            return self.getToken(LuaParser.LOCAL, 0)
        def FUNCTION(self):
            return self.getToken(LuaParser.FUNCTION, 0)
        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_localfunction" ):
                listener.enterStat_localfunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_localfunction" ):
                listener.exitStat_localfunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_localfunction" ):
                return visitor.visitStat_localfunction(self)
            else:
                return visitor.visitChildren(self)


    class Stat_whileContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(LuaParser.WHILE, 0)
        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)

        def DO(self):
            return self.getToken(LuaParser.DO, 0)
        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)

        def END(self):
            return self.getToken(LuaParser.END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_while" ):
                listener.enterStat_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_while" ):
                listener.exitStat_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_while" ):
                return visitor.visitStat_while(self)
            else:
                return visitor.visitChildren(self)


    class Stat_globalContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def globalstat(self):
            return self.getTypedRuleContext(LuaParser.GlobalstatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_global" ):
                listener.enterStat_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_global" ):
                listener.exitStat_global(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_global" ):
                return visitor.visitStat_global(self)
            else:
                return visitor.visitChildren(self)


    class Stat_doContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DO(self):
            return self.getToken(LuaParser.DO, 0)
        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)

        def END(self):
            return self.getToken(LuaParser.END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_do" ):
                listener.enterStat_do(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_do" ):
                listener.exitStat_do(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_do" ):
                return visitor.visitStat_do(self)
            else:
                return visitor.visitChildren(self)


    class Stat_functionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNCTION(self):
            return self.getToken(LuaParser.FUNCTION, 0)
        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)

        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_function" ):
                listener.enterStat_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_function" ):
                listener.exitStat_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_function" ):
                return visitor.visitStat_function(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = LuaParser.Stat_emptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(LuaParser.SEMI)
                pass

            elif la_ == 2:
                localctx = LuaParser.Stat_assignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.varlist()
                self.state = 78
                self.match(LuaParser.EQ)
                self.state = 79
                self.explist()
                pass

            elif la_ == 3:
                localctx = LuaParser.Stat_functioncallContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.functioncall(0)
                pass

            elif la_ == 4:
                localctx = LuaParser.Stat_labelContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.label()
                pass

            elif la_ == 5:
                localctx = LuaParser.Stat_breakContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.match(LuaParser.BREAK)
                pass

            elif la_ == 6:
                localctx = LuaParser.Stat_gotoContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.match(LuaParser.GOTO)
                self.state = 85
                self.match(LuaParser.NAME)
                pass

            elif la_ == 7:
                localctx = LuaParser.Stat_doContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.match(LuaParser.DO)
                self.state = 87
                self.block()
                self.state = 88
                self.match(LuaParser.END)
                pass

            elif la_ == 8:
                localctx = LuaParser.Stat_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 90
                self.match(LuaParser.WHILE)
                self.state = 91
                self.exp(0)
                self.state = 92
                self.match(LuaParser.DO)
                self.state = 93
                self.block()
                self.state = 94
                self.match(LuaParser.END)
                pass

            elif la_ == 9:
                localctx = LuaParser.Stat_repeatContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 96
                self.match(LuaParser.REPEAT)
                self.state = 97
                self.block()
                self.state = 98
                self.match(LuaParser.UNTIL)
                self.state = 99
                self.exp(0)
                pass

            elif la_ == 10:
                localctx = LuaParser.Stat_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 101
                self.match(LuaParser.IF)
                self.state = 102
                self.exp(0)
                self.state = 103
                self.match(LuaParser.THEN)
                self.state = 104
                self.block()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 105
                    self.match(LuaParser.ELSEIF)
                    self.state = 106
                    self.exp(0)
                    self.state = 107
                    self.match(LuaParser.THEN)
                    self.state = 108
                    self.block()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 115
                    self.match(LuaParser.ELSE)
                    self.state = 116
                    self.block()


                self.state = 119
                self.match(LuaParser.END)
                pass

            elif la_ == 11:
                localctx = LuaParser.Stat_forContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 121
                self.match(LuaParser.FOR)
                self.state = 122
                self.match(LuaParser.NAME)
                self.state = 123
                self.match(LuaParser.EQ)
                self.state = 124
                self.exp(0)
                self.state = 125
                self.match(LuaParser.COMMA)
                self.state = 126
                self.exp(0)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 127
                    self.match(LuaParser.COMMA)
                    self.state = 128
                    self.exp(0)


                self.state = 131
                self.match(LuaParser.DO)
                self.state = 132
                self.block()
                self.state = 133
                self.match(LuaParser.END)
                pass

            elif la_ == 12:
                localctx = LuaParser.Stat_forContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 135
                self.match(LuaParser.FOR)
                self.state = 136
                self.namelist()
                self.state = 137
                self.match(LuaParser.IN)
                self.state = 138
                self.explist()
                self.state = 139
                self.match(LuaParser.DO)
                self.state = 140
                self.block()
                self.state = 141
                self.match(LuaParser.END)
                pass

            elif la_ == 13:
                localctx = LuaParser.Stat_functionContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 143
                self.match(LuaParser.FUNCTION)
                self.state = 144
                self.funcname()
                self.state = 145
                self.funcbody()
                pass
